--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "node-sass": "^6.0.0",
+    "sass-loader": "^11.1.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
